--- a/profile.html
+++ b/profile.html
@@ -9,24 +9,79 @@
     <meta name="description" content="Niama">
     <meta name="author" content="kimak">
 
+    <!--CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/profile.css">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
     <script src="/scripts/profile.js"></script>
-    
+
     <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
 <body onload="signInLogic()">
-    <h1 id="profileName">asdasd</h1>
-    <h2 id="nameOfUser">asdasd</h2>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <div class="navbar-brand">
+                <a href="index.html">
+                    <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
+                </a>
+            </div>
+            <ul class="navbar-nav" id="navbar">
+                <li class="nav-item">
+                    <a class="nav-link" href="learn.html">Learn</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="quiz.html">Quiz</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="profile.html">Profile</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <div id="quizHistoryTable">
-    </div>
-    <script>
-        getHistory();
-    </script>
+    <div class=container>
+
+
+        <div class="row h-100">
+            <div class="col-4 sidebar mh-100" id="sidebar">
+
+                <div class="profileCard shadow">
+                    <div class="spinner-border text-secondary" id="loadingProfile"></div>
+                    <h1 id="nameOfUser">asdasd</h1>
+                    <h1 id="profileName">asdasd</h1>
+                </div>
+            </div>
+
+            <div class="col-8 learnview mh-100">
+                <div class="historyCard overflow-auto shadow">
+                    <h1>Quiz History</h1>
+                    <div class="spinner-border text-secondary" id="loadingHistory"></div>
+                    <div id="quizHistoryTable">
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+        <script>
+            getHistory();
+        </script>
 </body>
 
 </html>
