--- a/register.html
+++ b/register.html
@@ -43,6 +43,18 @@
                 </div>
 
                 <div class="form-group">
+                  <label for="userType">I am a...</label>
+                  <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
+                  <label class="btn btn-secondary active">
+                    <input type="radio" name="Student" id="student" autocomplete="off" checked> Student
+                  </label>
+                  <label class="btn btn-secondary">
+                    <input type="radio" name="Lecturer" id="lecturer" autocomplete="off"> Lecturer
+                  </label>
+                </div>
+                </div>
+
+                <div class="form-group">
                   <div class="custom-checkbox custom-control">
                     <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="" />
                     <label for="agree" class="custom-control-label">I agree to the
