--- a/students.html
+++ b/students.html
@@ -2,62 +2,104 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marshall@Home &mdash; Home</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marshall@Home &mdash; Home</title>
 
-  <!--CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
+    <!--CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
+</script>
+<script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js">
+</script>
 
-  <link rel="stylesheet" href="css/students.css" />
-  
-  <link rel="stylesheet" href="css/navbar.css" />
-  <script src="/scripts/index.js"></script>
-  <script src="/scripts/signinlogic.js"></script>
-  <script src="/scripts/navbar.js"></script>
+
+
+    <link rel="stylesheet" href="css/students.css" />
+
+    <link rel="stylesheet" href="css/navbar.css" />
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/signinlogic.js"></script>
+    <script src="/scripts/navbar.js"></script>
+    <script src="/scripts/students.js"></script>
 </head>
 
 <body onload="signInLogic()" class="home-page">
 
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="index.html">
-          <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
-        </a>
-      </div>
-      <ul class="navbar-nav" id="navbar">
-        <li class="nav-item">
-          <a class="nav-link" href="learn.html">Learn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="quiz.html">Quiz</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="profile.html">Profile</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <div class="navbar-brand">
+                <a href="index.html">
+                    <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
+                </a>
+            </div>
+            <ul class="navbar-nav" id="navbar">
+                <li class="nav-item">
+                    <a class="nav-link" href="learn.html">Learn</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="quiz.html">Quiz</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="profile.html">Profile</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+    <div class="container h-50 shadow mainView">
+        <h1>All Students</h1>
+        <table class="table table-hover" id="sortTable">
+            <thead>
+              <tr>
+                <th>Student ID</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Lecturer</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr onclick="alert('bruh')">
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>Jeff Lmao</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>Jeff Lmao</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <button type="button" class="btn btn-outline-warning">Change Students</button>
+
     </div>
-  </nav>
 
-  
-  <div class="container h-100 shadow mainView">
+    
+    <div class="container h-50 shadow subView">
 
-  </div>
+    </div>
 
     <!--Scripts-->
 
-    <script>
-      lecturerNavbar();
+    <script>    
+        $('#sortTable').DataTable();
+        lecturerNavbar();
+        getAllStudents();
     </script>
 </body>
 
