--- a/students.html
+++ b/students.html
@@ -18,10 +18,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
-<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
-</script>
-<script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js">
-</script>
+    <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js">
+    </script>
+    <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js">
+    </script>
 
 
 
@@ -58,48 +58,50 @@
     </nav>
 
 
-    <div class="container h-50 shadow mainView">
+    <div class="container shadow mainView">
         <h1>All Students</h1>
-        <table class="table table-hover" id="sortTable">
-            <thead>
-              <tr>
-                <th>Student ID</th>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Lecturer</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr onclick="alert('bruh')">
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>Jeff Lmao</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>Jeff Lmao</td>
-              </tr>
-            </tbody>
-          </table>
-
-          <button type="button" class="btn btn-outline-warning">Change Students</button>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th style="width:5%">ID</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>Lecturer</th>
+                            <th style="width:20%"></th>
+                        </tr>
+                    </thead>
+                    <tbody id="allStudentsTableBody">
+                        <tr>
+                            <th>1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>Jeff Lmao</td>
+                            <td><button type="button" class="btn btn-outline-warning">Add Student</button></td>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>Jeff Lmao</td>
+                        </tr>
+                    </tbody>
+                </table>
+        </div>
 
     </div>
 
-    
+<!-- 
     <div class="container h-50 shadow subView">
 
-    </div>
+    </div> -->
 
     <!--Scripts-->
 
-    <script>    
+    <script>
         $('#sortTable').DataTable();
         lecturerNavbar();
         getAllStudents();
+        populateTableAllStudent();
     </script>
 </body>
 
