--- a/profile.html
+++ b/profile.html
@@ -3,11 +3,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg" href="/images/favicon.jpg">
     <title>Marshall@Home &mdash; Profile</title>
-    <meta name="description" content="Niama">
-    <meta name="author" content="kimak">
 
     <!--CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
