--- a/article.html
+++ b/article.html
@@ -1,123 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marshall@Home &mdash; Quiz</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marshall@Home &mdash; Quiz</title>
+    <!--CSS-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css"
+      rel="stylesheet"
+    />
+    <script src="/scripts/learn.js"></script>
+    <script src="/scripts/signinlogic.js"></script>
 
-  <!--CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
-  <script src="/scripts/learn.js"></script>
-  <script src="/scripts/signinlogic.js"></script>
-  
-  <script src="/scripts/navbar.js"></script>
-  <link rel="stylesheet" href="css/navbar.css" />
-</head>
+    <script src="/scripts/navbar.js"></script>
+    <link rel="stylesheet" href="css/navbar.css" />
+  </head>
 
-<body>
-
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="index.html">
-          <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
-        </a>
+  <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <div class="navbar-brand">
+          <a href="index.html">
+            <img
+              class="logo"
+              src="/images/logoicon.png"
+              alt="Marshalling@Home!"
+            />
+          </a>
+        </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarToggler"
+        >
+          <ul class="navbar-nav" id="navbar">
+            <li class="nav-item">
+              <a class="nav-link" href="learn.html">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quiz.html">Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <ul class="navbar-nav" id="navbar">
-        <li class="nav-item">
-          <a class="nav-link" href="learn.html">Learn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="quiz.html">Quiz</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="profile.html">Profile</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    </nav>
 
+    <script>
+      signInLogic();
+      lecturerNavbar();
+    </script>
+    <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
 
-  <script>
-    signInLogic();
-    lecturerNavbar();
-  </script>
-  <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/1b85d509e9.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
-
-  <style>
-    .answer {
-      margin-right: 10px;
-    }
-
-    .spinner {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      height: 60px;
-      width: 60px;
-      margin: 0px auto;
-      -webkit-animation: rotation 0.6s infinite linear;
-      -moz-animation: rotation 0.6s infinite linear;
-      -o-animation: rotation 0.6s infinite linear;
-      animation: rotation 0.6s infinite linear;
-      border-left: 6px solid rgba(0, 174, 239, 0.15);
-      border-right: 6px solid rgba(0, 174, 239, 0.15);
-      border-bottom: 6px solid rgba(0, 174, 239, 0.15);
-      border-top: 6px solid rgba(0, 174, 239, 0.8);
-      border-radius: 100%;
-    }
-
-    @-webkit-keyframes rotation {
-      from {
-        -webkit-transform: rotate(0deg);
+    <style>
+      .answer {
+        margin-right: 10px;
       }
 
-      to {
-        -webkit-transform: rotate(359deg);
-      }
-    }
-
-    @-moz-keyframes rotation {
-      from {
-        -moz-transform: rotate(0deg);
-      }
-
-      to {
-        -moz-transform: rotate(359deg);
-      }
-    }
-
-    @-o-keyframes rotation {
-      from {
-        -o-transform: rotate(0deg);
+      .spinner {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        height: 60px;
+        width: 60px;
+        margin: 0px auto;
+        -webkit-animation: rotation 0.6s infinite linear;
+        -moz-animation: rotation 0.6s infinite linear;
+        -o-animation: rotation 0.6s infinite linear;
+        animation: rotation 0.6s infinite linear;
+        border-left: 6px solid rgba(0, 174, 239, 0.15);
+        border-right: 6px solid rgba(0, 174, 239, 0.15);
+        border-bottom: 6px solid rgba(0, 174, 239, 0.15);
+        border-top: 6px solid rgba(0, 174, 239, 0.8);
+        border-radius: 100%;
       }
 
-      to {
-        -o-transform: rotate(359deg);
-      }
-    }
+      @-webkit-keyframes rotation {
+        from {
+          -webkit-transform: rotate(0deg);
+        }
 
-    @keyframes rotation {
-      from {
-        transform: rotate(0deg);
+        to {
+          -webkit-transform: rotate(359deg);
+        }
       }
 
-      to {
-        transform: rotate(359deg);
-      }
-    }
-  </style>
-</body>
+      @-moz-keyframes rotation {
+        from {
+          -moz-transform: rotate(0deg);
+        }
 
+        to {
+          -moz-transform: rotate(359deg);
+        }
+      }
+
+      @-o-keyframes rotation {
+        from {
+          -o-transform: rotate(0deg);
+        }
+
+        to {
+          -o-transform: rotate(359deg);
+        }
+      }
+
+      @keyframes rotation {
+        from {
+          transform: rotate(0deg);
+        }
+
+        to {
+          transform: rotate(359deg);
+        }
+      }
+    </style>
+  </body>
 </html>
