--- a/learn.html
+++ b/learn.html
@@ -23,25 +23,47 @@
 <body>
 
   <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <div class="navbar-brand">
-        <a href="index.html">
-          <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
-        </a>
+      <div class="container">
+        <div class="navbar-brand">
+          <a href="index.html">
+            <img
+              class="logo"
+              src="/images/logoicon.png"
+              alt="Marshalling@Home!"
+            />
+          </a>
+        </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarToggler"
+        >
+          <ul class="navbar-nav" id="navbar">
+            <li class="nav-item">
+              <a class="nav-link" href="learn.html">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quiz.html">Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <ul class="navbar-nav" id="navbar">
-        <li class="nav-item">
-          <a class="nav-link" href="learn.html">Learn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="quiz.html">Quiz</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="profile.html">Profile</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    </nav>
 
   <div class="container h-80 mainview shadow">
     <div class="row h-100">
