--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,6 @@
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/profile.css">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
@@ -32,24 +31,46 @@
 
 <body onload="signInLogic()">
     <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-brand">
-                <a href="index.html">
-                    <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
-                </a>
-            </div>
-            <ul class="navbar-nav" id="navbar">
-                <li class="nav-item">
-                    <a class="nav-link" href="learn.html">Learn</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="profile.html">Profile</a>
-                </li>
-            </ul>
+      <div class="container">
+        <div class="navbar-brand">
+          <a href="index.html">
+            <img
+              class="logo"
+              src="/images/logoicon.png"
+              alt="Marshalling@Home!"
+            />
+          </a>
         </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarToggler"
+        >
+          <ul class="navbar-nav" id="navbar">
+            <li class="nav-item">
+              <a class="nav-link" href="learn.html">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="quiz.html">Quiz</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <div class="container h-80">
