--- a/learn.html
+++ b/learn.html
@@ -18,6 +18,10 @@
   <link rel="stylesheet" href="css/navbar.css" />
   <link rel="stylesheet" href="css/learn.css" />
   <script src="/scripts/navbar.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
