--- a/mystudents.html
+++ b/mystudents.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="navbar-brand">
-          <a href="index.html">
+          <a href="home.html">
             <img
               class="logo"
               src="/images/logoicon.png"
