--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="navbar-brand">
-          <a href="index.html">
+          <a href="home.html">
             <img
               class="logo"
               src="/images/logoicon.png"
@@ -92,7 +92,7 @@
                         <label for="username">Name:</label>
                         <input id="username" type="username" class="form-control" name="username" value="" />
                         <label for="email">Email Address:</label>
-                        <input id="email" type="email" class="form-control" name="email" readonly />
+                        <input id="email" type="email" class="form-control" name="email" />
                         <label for="profilePicture">Profile Picture Link:</label>
                         <input id="profilePicture" type="profilePicture" class="form-control" name="profilePicture" />
                     </div>
